--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "keywords": ["Laravel", "Payments", "PayPal", "Stripe", "Payment Gateway", "Multi Payment Gateways"],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "~5",
+        "illuminate/support": "^5.6|^6.0|^7.0|^8.0",
         "cartalyst/stripe-laravel": ">=4.0.0",
         "anouar/paypalpayment": ">=3.0"
     },
